# git-remote-opendal

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  WORKFLOW.md  install.sh  mise.toml
.github/workflows/: docs.yml  release.yml
src/: config.rs  credentials.rs  helper.rs  main.rs  operator.rs  protocol.rs  storage.rs
src/operator/: azblob.rs  fs.rs  gcs.rs  gdrive.rs  memory.rs  s3.rs
