[package]
name = "git-remote-opendal"
version = "0.2.1"
edition = "2024"
description = "Use any cloud storage as a Git remote via Apache OpenDAL"
license = "MIT"
repository = "https://github.com/good-jinu/git-remote-opendal"
keywords = ["git", "opendal", "s3", "cloud-storage", "remote-helper"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "git-remote-opendal"
path = "src/main.rs"

[dependencies]
# OpenDAL 0.56 — requires Rust ≥ 1.85.
# Install a modern toolchain: rustup install stable && rustup default stable
opendal = { version = "0.56", features = [
    "services-s3",
    "services-gcs",
    "services-azblob",
    "services-gdrive",
    "services-fs",
    "services-memory",
    "layers-logging",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization for refs metadata
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Byte buffer (opendal returns Buffer which converts to bytes::Bytes)
bytes = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Unique identifiers
uuid = { version = "1", features = ["v4"] }

# Temp files and directories
tempfile = "3"

# Logging to stderr (safe for git remote helpers — git reads stdout only)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cross-platform masked terminal input (/dev/tty on Unix, SetConsoleMode on Windows)
rpassword = "7"

# Process spawning for git fast-import / fast-export uses std::process only.

[dev-dependencies]
# Serializing tests that mutate process-global environment variables
serial_test = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
